# whats-agents

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  basic_agent.py  docker-compose.yml  pyproject.toml  railway.json  run.sh  testes.py
.claude/commands/: pm-agent.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dashboard-ci.yml
app/: CONVENTIONS.md  __init__.py  agent.py  database.py  evolution.py  main.py
app/api/: error_handlers.py  middleware.py
app/config/: especialidades.py  followup.py  regioes.py
app/constants/: tags.py
app/contexts/: __init__.py
app/core/: auth.py  config.py  constants.py  decorators.py  distributed_lock.py  exceptions.py  logging.py  metrics.py  piloto_config.py  prompts.py  tasks.py  timezone.py  tracing.py  utils.py
app/fragmentos/: __init__.py  aberturas.py  mensagens.py
app/pipeline/: __init__.py  base.py  core.py  post_processors.py  pre_processors.py  processor.py  setup.py
app/prompts/: __init__.py  builder.py  loader.py
app/repositories/: __init__.py  base.py  cliente.py  deps.py
app/schemas/: evolution.py  mensagem.py
app/services/: abertura.py  agente.py  agente_slack.py  alertas.py  briefing.py  briefing_analyzer.py  briefing_aprovacao.py  briefing_executor.py  briefing_parser.py  campaign_attribution.py  campaign_behaviors.py  campaign_cooldown.py  campaign_sends.py  campaign_templates.py  campanha.py  canal_ajuda.py  chatwoot.py  circuit_breaker.py  confirmacao_plantao.py  conhecimento_hospitais.py  contexto.py  conversa.py  dashboard_notifications.py  delay_engine.py  delivery_status.py  deteccao_bot.py  diretrizes_contextuais.py  embedding.py  error_handler.py  estados_conversa.py  feedback.py  fila.py  fila_mensagens.py  followup.py  fora_horario.py  gatilhos_autonomos.py  gestor_comanda.py  google_docs.py  handoff.py  handoff_detector.py  (+36 more)
app/templates/: __init__.py  aberturas.py  mensagens.py
app/tools/: __init__.py  interactive_messages.py  interactive_validation.py  intermediacao.py  lembrete.py  memoria.py  registry.py  response_formatter.py  slack_tools.py  vagas.py
app/workers/: __init__.py  __main__.py  backfill_extraction.py  fila_worker.py  grupos_worker.py  handoff_processor.py  pilot_mode.py  scheduler.py  (+2 more)
bootstrap/: 01-schema.sql  02-seeds.sql  README.md  SMOKE-TEST.md
config/: prompts.py  settings.py
dashboard/: .env.example  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  DEVELOPMENT.md  lighthouserc.js  middleware.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  railway.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts  vitest.setup.tsx
data/: medicos_piloto.md
deprecated/: prompts.py
docs/: 01-ARQUITETURA.md  03-SERVICOS.md  04-BANCO-DE-DADOS.md  05-CONFIGURACAO.md  07-LOGICA-NEGOCIO.md  08-PERSONA-JULIA.md  09-INTEGRACOES.md  10-TESTES-MANUAIS.md  AUDITORIA_PROCESSOS.md  AUDITORIA_TECNICA.md  BRIEFING_TEMPLATE.md  DADOS.md  DATABASE.md  DEPLOY.md  FLUXOS.md  INTEGRACOES.md  METRICAS_MVP.md  README.md  RELATORIO-EXECUTIVO-JULIA.md  RESUMO_DESIGN.md  RUNBOOK.md  SETUP.md  SPEC.md  SPRINTS.md  TECHNICAL.md  api-endpoints.md  banco-de-dados.md  campaign-templates.md  guardrails-queries.md  manual-julia-completo.md  playbook-handoff.md  producao-canary.md  rascunho.md  servicos.md
migrations/: 20260103_dashboard_notifications.sql  criar_indices_performance.sql  sprint44_t03_5_dlq.sql  sprint44_t04_1_reserva_transacional.sql
planning/: README.md  architecture-post-sprint-26.md  backlog-consolidado.md  epic-market-intelligence.md
scripts/: README.md  analisar_piloto.py  analisar_queries.py  analisar_testes.py  backfill_embeddings.py  bootstrap-prod.md  check-coverage-by-module.py  check_doc_metrics.py  check_env.py  ci-local.sh  ciclo_melhoria.py  entrypoint.sh  executar_piloto.py  importar_hospitais.py  indexar_conhecimento.py  join_groups.py  merge_chatwoot_contacts.py  migrar_campanhas_v2.py  migrate-to-prod.sh  reprocessar_valores_v3.py  retroactive_conversas.py  selecionar_piloto.py  selo_producao_check.py  test_extrator_v3.py  teste_manual_sprint8.py  view_logs.sh
skills_projetos/: CLAUDE-SKILLS-BLOCK.md  README.md  setup-skills.sh
static/: avaliar.html  dashboard.html
tests/: conftest.py  test_aberturas.py  test_agente_slack.py  test_architecture_guardrails.py  test_briefing_analyzer.py  test_briefing_aprovacao.py  test_briefing_executor.py  test_circuit_breaker.py  test_especialidades.py  test_google_docs.py  test_handoff_detector.py  test_optout.py  test_parser.py  test_rate_limiter.py  test_slack_formatter.py  test_sprint44_corrections.py  test_supabase_helpers.py  test_tipos_abordagem.py  test_tool_briefing.py  test_tool_buscar_vagas.py  test_vaga.py  test_validacao_output.py
(+1958 files in other folders)
