[project]
name = "julia-agent"
version = "0.1.0"
description = "Agente Júlia - Escalista Virtual para Staffing Médico"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "supabase>=2.3.0",
    "anthropic>=0.18.0",
    "redis>=7.1.0",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.43.0",
    "google-auth-oauthlib>=1.2.2",
    "voyageai>=0.3.0",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.3",
    "pandas>=2.3.3",
    "lxml>=6.0.2",
    "playwright>=1.57.0",
    "ipykernel>=7.1.0",
    "nest-asyncio>=1.6.0",
    "openpyxl>=3.1.5",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# Ignorar erros intencionais
ignore = [
    "E402",  # module level import not at top of file (conditional imports)
]

[tool.ruff.lint.per-file-ignores]
# Re-exports em __init__.py são intencionais
"__init__.py" = ["F401", "F403"]
# Backward compatibility re-exports
"app/services/slack_formatter.py" = ["F401", "F403"]

[tool.black]
line-length = 100
target-version = ["py313"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "docs/",
    "planning/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = [
    "supabase.*",
    "voyageai.*",
    "anthropic.*",
    "redis.*",
    "google.*",
    "googleapiclient.*",
    "bs4.*",
    "lxml.*",
    "openpyxl.*",
    "playwright.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
addopts = [
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=45",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/__init__.py",
    "app/main.py",
    "*/tests/*",
    "*/__pycache__/*",
]
branch = true

[tool.coverage.report]
fail_under = 45
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
show_missing = true
